<resources>
    <string name="app_name">AimSupporter</string>
    <string name="Settings">Настройки</string>
    <string name="add_new_aim">Добавить цель</string>
    <string name="your_aims">Ваши цели:</string>
    <string name="gotted">Выполнено</string>
    <string name="aim_name">Ваша цель</string>
    <string name="aim_desc">Планы и заметки</string>
    <string name="aim_time">Установить дату</string>
    <string name="set_aim_date">Выберите сроки:</string>
    <string name="go">Добавить</string>
    <string name="aim_edit_title">Редактирование цели</string>
    <string-array name="time_to_notify">
        <item>5 часов</item>
        <item>4 часа</item>
        <item>3 часа</item>
        <item>2 часа</item>
        <item>Никогда</item>
    </string-array>
    <string name = "noty_title">AimSupporter</string>
    <string name = "noty_desc">Что вы сделали сегодня для достижения своих целей? </string>
    <string name="delete_message">Вы уверены, что хотите удалить данную цель?</string>
    <string name="delete_title">Удаление</string>
    <string name="delete_yes">Да</string>
    <string name="delete_cancel">Отмена</string>
    <string name="delete_aim_hint">Цель успешно удалена</string>
    <string name="aim_create">Создание цели</string>
    <string name="notify_sets">Частота уведомлений:</string>
    <string name="bg_sets">Фон главного экрана</string>
</resources>
